fix:/scope collapse button text too big on mobile

--- a/src/styles/file.css
+++ b/src/styles/file.css
@@ -413,4 +413,7 @@ a {
 		--_gutter-left-width: 1px;
 		--_gutter-right-width: 2ch;
 	}
+	.line .view-number button {
+		font-size: 6px;
+	}
 }
